# granularplunderphonics

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Source/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Tests/: AudioProcessorTests.cpp  CMakeLists.txt  ParameterTests.cpp
src/: CMakeLists.txt  GranularPlunderphonicsEditor.cpp  GranularPlunderphonicsEditor.h
src/LookAndFeel/: GranularLookAndFeel.cpp  GranularLookAndFeel.h
src/audio/: AttractorFactory.cpp  AttractorFactory.h  AudioBuffer.cpp  AudioBuffer.h  AudioFile.cpp  AudioFile.h  ChaoticAttractors.h  ChaoticBase.h  DifferentialEquationSolver.cpp  DifferentialEquationSolver.h  FileFormat.cpp  FileFormat.h  GrainCloud.cpp  GrainCloud.h  GrainEngine.cpp  GrainEngine.h  GrainGenerator.cpp  GrainGenerator.h  GrainProcessor.cpp  GrainProcessor.h  LorenzAttractor.cpp  LorenzAttractor.h  ModulationMatrix.cpp  ModulationMatrix.h  ModulationMatrixFactory.h  PhaseVocoder.cpp  PhaseVocoder.h  Resampler.cpp  Resampler.h  StreamingManager.cpp  StreamingManager.h  VoiceManager.h
src/common/: ErrorHandling.cpp  ErrorHandling.h  Logger.cpp  Logger.h  ResourceManager.cpp  ResourceManager.h
src/plugin/: GranularParameters.h  GranularPlunderphonicsController.cpp  GranularPlunderphonicsController.h  GranularPlunderphonicsEntry.cpp  GranularPlunderphonicsIDs.h  GranularPlunderphonicsProcessor.cpp  GranularPlunderphonicsProcessor.h  ParameterManager.cpp  ParameterManager.h  version.h
src/ui/: UISettings.h
src/ui/components/: AttractorVisualizer.jsx  HeaderPanel.cpp  HeaderPanel.h  MainPanel.cpp  MainPanel.h  ModulationMatrixDemo.jsx  ModulationMatrixVisualizer.jsx
test/: AudioFileTests.cpp  BasicTests.cpp  CMakeLists.txt  GrainCloudTests.cpp  GrainGeneratorTests.cpp  GrainProcessorTests.cpp  LorenzAttractorTests.cpp  ModulationIntegrationTests.cpp  ModulationMatrixTests.cpp  ParameterTests.cpp  ProcessorTests.cpp  ResourceManagerTests.cpp  TestMain.cpp
